# takopi

./: .gitignore  Justfile  changelog.md  developing.md  mkdocs.yml  pyproject.toml  readme.md  zensical.toml
.codex/: AGENTS.md
.codex/skills/takopi-release/: SKILL.md
.github/workflows/: ci.yml
codex_telegram_bridge/: readme.md
codex_telegram_bridge/src/codex_telegram_bridge/: config.py  exec_bridge.py  exec_render.py
codex_telegram_bridge/tests/: test_exec_bridge.py  test_exec_render.py
docs/: CNAME  developing.md  index.md  specification.md  user-guide.md
docs/reference/: specification.md
docs/stylesheets/: admonitions.css
docs/transports/: telegram.md
docs/tutorials/: first-run.md  index.md  install-and-onboard.md  multi-engine.md  projects-and-branches.md
scripts/: docs_build_cf.sh  docs_prebuild.py
src/takopi/: __init__.py  bridge.py  config.py  constants.py  render.py  rendering.py  runner_bridge.py  settings.py
src/takopi/runners/: codex.py
src/takopi/telegram/: backend.py  bridge.py  commands.py  loop.py
src/takopi/telegram/commands/: topics.py
tests/: test_exec_bridge.py  test_exec_render.py  test_exec_runner.py  test_rendering.py  test_subprocess.py  test_telegram_backend.py  test_telegram_bridge.py  test_telegram_client.py  test_telegram_topic_state.py  test_worktrees.py
tests/fixtures/: codex.jsonl  codex_exec_json_all_formats.jsonl  codex_exec_json_all_formats.txt
